--- a/backend/src/main/resources/aplication-heroku.properties
+++ b/backend/src/main/resources/aplication-heroku.properties
@@ -1,5 +1,7 @@
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.h2.Driver
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
